--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
         <div class="videos__item"><a class="videos__item-icon" href="#"><img src="images/play-btn-white.png" alt=""></a></div>
       </div>
       <div class="storySection">
-        <h2>اكتشف رفوف القصص
+        <h2>اكتشف رفوف القصص 
           <a href=""><i class="fa-solid fa-arrow-left-long pr-2"></i></a>
         </h2>
       </div>
@@ -83,8 +83,11 @@
       <div class="section-title mb-3">خطط الاشتراك</div>
       <div class="section-description">مستعد لإعداد مكتبتك؟ اختر مدة الاشتراك التي تناسبك</div>
       <div class="container">
-        <div class="row mt-5">
-          <div class="col-md-4"><img class="plans__img" src="images/subscription-bg.png"></div>
+        <div class="row mt-5 pb-5">
+          <div class="back_img col-md-4">
+            <div class="back_img">
+              <img class="plans__img" src="images/subscription-bg.png"></div>
+            </div>
           <div class="col-md-4">
             <h5 class="mb-3 font-weight-bold">ما مميزات الاشتراك في موقع فيلو؟</h5>
             <ul class="plans__features">
@@ -93,6 +96,49 @@
               <li>الإلغاء في أي وقت</li>
               <li>تحميل القصص المفضلة للاستماع إليها بدون إنترنت</li>
             </ul>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <div class="card-body">
+                <h2 class="card-title">بلا حدود</h2>
+                <p class="card-text">
+                  احصل على اشتراكك لتستمع بلا حدود إلى آلاف الكتب باللغتين العربية والإنجليزية
+                </p>
+                <div class="accounts">
+                  <div class="clearfix">                    
+                    <h3 class="float-right">حسابات</h3>
+                    <h3 class="float-left">1
+
+                    </h3>
+                  </div>
+                  <h3>حدد اشتراكك</h3>
+                  <div class="form_ch">
+                    <div class="box-form">
+                      <div class="clearfix">  
+                        <div class="float-right form-check form-check-inline">
+                          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                          <label class="form-check-label card-title" for="inlineRadio1">شهري</label>
+                        </div>
+                        <h3 class="float-left">20ILS <strong>/</strong> شهريا</h3>
+                      </div>  
+                      <p class = "sub-select">يجدد تلقائيا كل شهر </p>                
+                    </div>
+                    <br>
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                      <label class="form-check-label" for="inlineRadio2">2</label>
+                    </div>
+                    <br>
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
+                      <label class="form-check-label" for="inlineRadio3">3</label>
+                    </div>
+
+                  </div>
+                </div>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
