--- a/app/index.html
+++ b/app/index.html
@@ -108,16 +108,18 @@
                   <div class="clearfix">                    
                     <h3 class="float-right">حسابات</h3>
                     <h3 class="float-left">1
-
                     </h3>
                   </div>
+                </div>
                   <h3>حدد اشتراكك</h3>
                   <div class="form_ch">
-                    <div class="box-form">
+                    <div class="box1">
+                      
                       <div class="clearfix">  
-                        <div class="float-right form-check form-check-inline">
+                        <div class="float-right form-inline form-check form-check-inline">
                           <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                          <label class="form-check-label card-title" for="inlineRadio1">شهري</label>
+                          <label class="form-check-label card-title" for="inlineRadio1">
+                            <h3 class = "pr-1">شهري</h3></label>
                         </div>
                         <h3 class="float-left">20ILS <strong>/</strong> شهريا</h3>
                       </div>  
@@ -135,8 +137,8 @@
                     </div>
 
                   </div>
-                </div>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+
+                <a href="#" class="btn btn-block btn-primary">Go somewhere</a>
               </div>
             </div>
           </div>
