--- a/app/singleStory.html
+++ b/app/singleStory.html
@@ -54,14 +54,23 @@
           </nav>
         </div>
         <div class="section-divider"><img class="testimonials__divider" src="images/divider.png"></div>
-        <div class="clear-fix">
-          <div class="float-right">
-             <h3>قصة شجرة الدر </h3>
+        <div class ="titleSingle">
+          <div class="clearfix">
+            <div class="float-right">
+               <h2>قصة شجرة الدر 
+                 <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+               </h2>
+
+            </div>
+            <div class="float-left">
+              <nav class="nav">
+                <a class="nav-link active" aria-current="page" href="#">100 مشاهدة</a>
+                <a class="nav-link" href="#">حفظ
+                  <i class="fa-solid fa-bookmark"></i>
+                </a>
+              </nav>
+            </div>
           </div>
-          <div class="float-left">
-            
-          </div>
-        </div>
       </div>
     </section>
     <!-- page-banner-end-->
