--- a/app/singleStory.html
+++ b/app/singleStory.html
@@ -71,6 +71,15 @@
               </nav>
             </div>
           </div>
+          <div class="storyVideo">
+            <div class="row">
+              <div class="col-lg-12">
+                <iframe width="420" height="315"
+                src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
+                </iframe>
+              </div>
+            </div>
+          </div>
       </div>
     </section>
     <!-- page-banner-end-->
