--- a/app/singleStory.html
+++ b/app/singleStory.html
@@ -74,11 +74,14 @@
           <div class="storyVideo">
             <div class="row">
               <div class="col-lg-12">
-                <iframe width="420" height="315"
+                <iframe height="315"
                 src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
                 </iframe>
               </div>
             </div>
+          </div>
+          <div class="titleh3">
+            <h3 class=" text-center mb-3">هل أعجبتك القصة احكيلنا رأيك ؟</h3>
           </div>
       </div>
     </section>
