--- a/app/profile.html
+++ b/app/profile.html
@@ -43,7 +43,7 @@
     <!-- navbar-end-->
 
     <section class="showcase ProfilePage">
-      <div class="container">
+      <div class="">
         <div class="row">
           
             <div class="col-md-3">
@@ -55,11 +55,16 @@
                         </li>
                       <li class="list-group-item">
                           <a id="pills-profile-tab" data-toggle="pill" href="#pills-store" role="tab" aria-controls="pills-store" aria-selected="false">
-                            مكتبتى </a>
+                            <i class="fa-solid fa-bars pl-2"></i>مكتبتى </a>
                       </li>
                       <li class="list-group-item">
-                        <a id="pills-other-tab" data-toggle="pill" href="#pills-other" role="tab" aria-controls="pills-other" aria-selected="false">Play Staition</a>
-                          </li>
+                        <a id="pills-other-tab" data-toggle="pill" href="#pills-other" role="tab" aria-controls="pills-other" aria-selected="false">
+                            <i class="fa-solid fa-circle-chevron-down pl-2"></i>الفيديوهات المحفوظة </a>
+                      </li>
+                      <li class="list-group-item">
+                        <a id="pills-other-tab" data-toggle="pill" href="#pills-other" role="tab" aria-controls="pills-other" aria-selected="false">
+                            <i class="fa-solid fa-arrow-right-from-bracket pl-2"></i>تسجيل خروج</a>
+                      </li>
 
                     </ul>
                   
