--- a/app/profile.html
+++ b/app/profile.html
@@ -203,77 +203,7 @@
                     </div>  
                     <div class="tab-pane fade" id="pills-exit" role="tabpanel" aria-labelledby="pills-exit-tab">
                         <div class="container">
-                            <h2 class="section-title section-title--smaller section-title--right">القصص التي قمت بحفظها </h2>
-                            <div class="row mt-5">
-                              <div class="col-md-4">
-                                <div class="stories-section__container">
-                                  <div class="stories-section__item">
-                                    <div class="stories-section__item-save"><span>حفظ</span><i class="far fa-bookmark"></i></div><a href="#"><img src="images/play-btn-orange.png"></a>
-                                  </div>
-                                  <div class="stories-section__item-info">
-                                    <div class="stories-section__item-title-rating"><span class="title">قصة شجرة الدر</span><span class="rating">4.0<i class="fas fa-star"></i></span></div>
-                                    <div class="stories-section__item-views"><span>100 مشاهدة</span></div>
-                                  </div>
-                                </div>
-                              </div>
-                              <div class="col-md-4">
-                                <div class="stories-section__container">
-                                  <div class="stories-section__item">
-                                    <div class="stories-section__item-save"><span>حفظ</span><i class="far fa-bookmark"></i></div><a href="#"><img src="images/play-btn-orange.png"></a>
-                                  </div>
-                                  <div class="stories-section__item-info">
-                                    <div class="stories-section__item-title-rating"><span class="title">قصة شجرة الدر</span><span class="rating">4.0<i class="fas fa-star"></i></span></div>
-                                    <div class="stories-section__item-views"><span>100 مشاهدة</span></div>
-                                  </div>
-                                </div>
-                              </div>
-                              <div class="col-md-4">
-                                <div class="stories-section__container">
-                                  <div class="stories-section__item">
-                                    <div class="stories-section__item-save"><span>حفظ</span><i class="far fa-bookmark"></i></div><a href="#"><img src="images/play-btn-orange.png"></a>
-                                  </div>
-                                  <div class="stories-section__item-info">
-                                    <div class="stories-section__item-title-rating"><span class="title">قصة شجرة الدر</span><span class="rating">4.0<i class="fas fa-star"></i></span></div>
-                                    <div class="stories-section__item-views"><span>100 مشاهدة</span></div>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="row mt-3">
-                                <div class="col-md-4">
-                                  <div class="stories-section__container">
-                                    <div class="stories-section__item">
-                                      <div class="stories-section__item-save"><span>حفظ</span><i class="far fa-bookmark"></i></div><a href="#"><img src="images/play-btn-orange.png"></a>
-                                    </div>
-                                    <div class="stories-section__item-info">
-                                      <div class="stories-section__item-title-rating"><span class="title">قصة شجرة الدر</span><span class="rating">4.0<i class="fas fa-star"></i></span></div>
-                                      <div class="stories-section__item-views"><span>100 مشاهدة</span></div>
-                                    </div>
-                                  </div>
-                                </div>
-                                <div class="col-md-4">
-                                  <div class="stories-section__container">
-                                    <div class="stories-section__item">
-                                      <div class="stories-section__item-save"><span>حفظ</span><i class="far fa-bookmark"></i></div><a href="#"><img src="images/play-btn-orange.png"></a>
-                                    </div>
-                                    <div class="stories-section__item-info">
-                                      <div class="stories-section__item-title-rating"><span class="title">قصة شجرة الدر</span><span class="rating">4.0<i class="fas fa-star"></i></span></div>
-                                      <div class="stories-section__item-views"><span>100 مشاهدة</span></div>
-                                    </div>
-                                  </div>
-                                </div>
-                                <div class="col-md-4">
-                                  <div class="stories-section__container">
-                                    <div class="stories-section__item">
-                                      <div class="stories-section__item-save"><span>حفظ</span><i class="far fa-bookmark"></i></div><a href="#"><img src="images/play-btn-orange.png"></a>
-                                    </div>
-                                    <div class="stories-section__item-info">
-                                      <div class="stories-section__item-title-rating"><span class="title">قصة شجرة الدر</span><span class="rating">4.0<i class="fas fa-star"></i></span></div>
-                                      <div class="stories-section__item-views"><span>100 مشاهدة</span></div>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
+                                <h2 class = "text-center">logout</h2>
                         </div>
                     </div> 
                     <div class="tab-pane fade" id="pills-other" role="tabpanel" aria-labelledby="pills-other-tab">
