--- a/app/profile.html
+++ b/app/profile.html
@@ -472,7 +472,7 @@
                           <div class="mt-3 mb-3">
                               <textarea name="" id="" cols="32" rows="8">عبر عن نفسك</textarea>
                           </div>
-                        <button type="submit" class="btn btn-block">Submit</button>
+                        <button type="submit" class="btn btn-block">حفظ التعديلات</button>
                       </form>
                 </div>
                 
