--- a/app/profile.html
+++ b/app/profile.html
@@ -203,7 +203,7 @@
                     </div>  
                     <div class="tab-pane fade" id="pills-exit" role="tabpanel" aria-labelledby="pills-exit-tab">
                         <div class="container">
-                                <h2 class = "text-center">logout</h2>
+                                <h2 class = "text-center mt-5">تسجيل الخروج</h2>
                         </div>
                     </div> 
                     <div class="tab-pane fade" id="pills-other" role="tabpanel" aria-labelledby="pills-other-tab">
