--- a/app/payment.html
+++ b/app/payment.html
@@ -60,23 +60,41 @@
     <section class = "paymentSection">
       <div class="container">
         <div class="row">
-          <div class="col-md-4 text-center">
+          <div class="col-md-4 text-center align-self-center">
             <img src="images/payment.png" alt="">
           </div>
-          <div class="col-md-4">
-            <div class="align-self-center">
-              <h5 class="mb-3 font-weight-bold">ما مميزات الاشتراك في موقع فيلو؟</h5>
-              <ul class="plans__features">
-                <li>مسارات لا نهائية من القصص</li>
-                <li>مشاهدة بلا حدود</li>
-                <li>الإلغاء في أي وقت</li>
-                <li>تحميل القصص المفضلة للاستماع إليها بدون إنترنت</li>
-              </ul>
-            </div>
+          <div class="col-md-4 align-self-center">
+            <h5 class="mb-3 font-weight-bold">ما مميزات الاشتراك في موقع فيلو؟</h5>
+            <ul class="plans__features">
+              <li>مسارات لا نهائية من القصص</li>
+              <li>مشاهدة بلا حدود</li>
+              <li>الإلغاء في أي وقت</li>
+              <li>تحميل القصص المفضلة للاستماع إليها بدون إنترنت</li>
+            </ul>
           </div>
           <div class="col-md-4">
             <div class="card">
-              
+              <div class="card-header text-center">
+                <h2>
+                  عملية دفع آمنة
+                </h2>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">طريقة الدفع</h5>
+                <p class="card-text">الخطوة 2/2 تفاصيل الدفع</p>
+                <div class="card-payment">
+                  <div class="card">
+                    <h4>بطاقة الائتمان / الخصم المباشر</h4>
+                    <p>ادفع ببطاقة الائتمان أو الخصم. بعد إدخال تفاصيل بطاقتك، قد تتم 
+                      إعادة توجيهك إلى checkout.com أو البنك الذي تتعامل معه لإكمال 
+                      طريقة الدفع بنظام الأمان ثلاثي الأبعاد</p>
+
+                  </div>
+                </div>
+                <h3 class = "listeNow mt-4">استمع بلا حدود</h3>
+                <span>ادفع الأن <mark>50%</mark></span>
+                <a href="#" class="btn btn-block">اشترك الان</a>
+              </div>
             </div>
           </div>
         </div>
