--- a/app/payment.html
+++ b/app/payment.html
@@ -94,6 +94,9 @@
                 <h3 class = "listeNow mt-4">استمع بلا حدود</h3>
                 <span>ادفع الأن <mark>50%</mark></span>
                 <a href="#" class="btn btn-block">اشترك الان</a>
+                <p>من الجيد أن تعرف: بعد 3 أيام ، سيتحول الاشتراك تلقائيًا إلى اشتراك منتظم 
+                  وستدفع 50 دولار بعد 30 يوم 
+                </p>
               </div>
             </div>
           </div>
