--- a/app/payment.html
+++ b/app/payment.html
@@ -56,7 +56,7 @@
         </div>
      </div>
     </section>
-]
+
     <section class = "paymentSection">
       <div class="container">
         <div class="row">
@@ -88,7 +88,26 @@
                     <p>ادفع ببطاقة الائتمان أو الخصم. بعد إدخال تفاصيل بطاقتك، قد تتم 
                       إعادة توجيهك إلى checkout.com أو البنك الذي تتعامل معه لإكمال 
                       طريقة الدفع بنظام الأمان ثلاثي الأبعاد</p>
-
+                      <form>
+                        <div class="form-group">
+                          <label for="formGroupExampleInput">رقم البطاقة</label>
+                          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="123456789">
+                        </div>
+                        <div class="row">
+                          <div class="col">
+                            <div class="form-group">
+                              <label for="formGroupExampleInput2">Another label</label>
+                              <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+                            </div>
+                          </div>
+                          <div class="col">
+                            <div class="form-group">
+                              <label for="formGroupExampleInput2">Another label</label>
+                              <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+                            </div>
+                          </div>
+                        </div>
+                      </form>
                   </div>
                 </div>
                 <h3 class = "listeNow mt-4">استمع بلا حدود</h3>
