--- a/app/payment.html
+++ b/app/payment.html
@@ -85,25 +85,28 @@
                 <div class="card-payment">
                   <div class="card">
                     <h4>بطاقة الائتمان / الخصم المباشر</h4>
-                    <p>ادفع ببطاقة الائتمان أو الخصم. بعد إدخال تفاصيل بطاقتك، قد تتم 
+                    <p class ="mt-5">ادفع ببطاقة الائتمان أو الخصم. بعد إدخال تفاصيل بطاقتك، قد تتم 
                       إعادة توجيهك إلى checkout.com أو البنك الذي تتعامل معه لإكمال 
                       طريقة الدفع بنظام الأمان ثلاثي الأبعاد</p>
                       <form>
                         <div class="form-group">
                           <label for="formGroupExampleInput">رقم البطاقة</label>
                           <input type="text" class="form-control" id="formGroupExampleInput" placeholder="123456789">
+                          <span> 
+                            <i class="fas fa-credit-card"></i>
+                          </span>
                         </div>
                         <div class="row">
                           <div class="col">
                             <div class="form-group">
-                              <label for="formGroupExampleInput2">Another label</label>
-                              <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+                              <label for="formGroupExampleInput2">تاريخ الانتهاء </label>
+                              <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="15/12/2023">
                             </div>
                           </div>
                           <div class="col">
                             <div class="form-group">
-                              <label for="formGroupExampleInput2">Another label</label>
-                              <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+                              <label for="formGroupExampleInput2">رمز التحقق من البطاقة</label>
+                              <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="123">
                             </div>
                           </div>
                         </div>
@@ -111,9 +114,9 @@
                   </div>
                 </div>
                 <h3 class = "listeNow mt-4">استمع بلا حدود</h3>
-                <span>ادفع الأن <mark>50%</mark></span>
+                <h6 class  = "text-center pay">ادفع الأن <mark>50%</mark></h6>
                 <a href="#" class="btn btn-block">اشترك الان</a>
-                <p>من الجيد أن تعرف: بعد 3 أيام ، سيتحول الاشتراك تلقائيًا إلى اشتراك منتظم 
+                <p class = "p">من الجيد أن تعرف: بعد 3 أيام ، سيتحول الاشتراك تلقائيًا إلى اشتراك منتظم 
                   وستدفع 50 دولار بعد 30 يوم 
                 </p>
               </div>
