--- a/app/payment.html
+++ b/app/payment.html
@@ -91,22 +91,25 @@
                       <form>
                         <div class="form-group">
                           <label for="formGroupExampleInput">رقم البطاقة</label>
-                          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="123456789">
+                          <input type="text" class="form-control incard" id="formGroupExampleInput" placeholder="123456789">
                           <span> 
                             <i class="fas fa-credit-card"></i>
                           </span>
                         </div>
                         <div class="row">
                           <div class="col">
-                            <div class="form-group">
+                            <div class="form-group ">
                               <label for="formGroupExampleInput2">تاريخ الانتهاء </label>
                               <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="15/12/2023">
                             </div>
                           </div>
-                          <div class="col">
+                          <div class="col confirm">
                             <div class="form-group">
                               <label for="formGroupExampleInput2">رمز التحقق من البطاقة</label>
-                              <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="123">
+                              <input type="text" class="form-control " id="formGroupExampleInput2" placeholder="123">
+                              <span> 
+                                <i class="fas fa-credit-card"></i>
+                              </span>
                             </div>
                           </div>
                         </div>
