--- a/app/payment.html
+++ b/app/payment.html
@@ -59,7 +59,7 @@
 
     <section class = "paymentSection">
       <div class="container">
-        <div class="row">
+        <div class="row mb-3">
           <div class="col-md-4 text-center align-self-center">
             <img src="images/payment.png" alt="">
           </div>
@@ -91,7 +91,7 @@
                       <form>
                         <div class="form-group">
                           <label for="formGroupExampleInput">رقم البطاقة</label>
-                          <input type="text" class="form-control incard" id="formGroupExampleInput" placeholder="123456789">
+                          <input type="text" class=" incard" id="formGroupExampleInput" placeholder="123456789">
                           <span> 
                             <i class="fas fa-credit-card"></i>
                           </span>
@@ -100,13 +100,13 @@
                           <div class="col">
                             <div class="form-group ">
                               <label for="formGroupExampleInput2">تاريخ الانتهاء </label>
-                              <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="15/12/2023">
+                              <input type="text" id="formGroupExampleInput2" placeholder="15/12/2023">
                             </div>
                           </div>
                           <div class="col confirm">
                             <div class="form-group">
                               <label for="formGroupExampleInput2">رمز التحقق من البطاقة</label>
-                              <input type="text" class="form-control " id="formGroupExampleInput2" placeholder="123">
+                              <input type="text" id="formGroupExampleInput2" placeholder="123">
                               <span> 
                                 <i class="fas fa-credit-card"></i>
                               </span>
@@ -116,6 +116,13 @@
                       </form>
                   </div>
                 </div>
+                <div class="form-check mt-4">
+                  <label class="form-check-label" for="defaultCheck1">
+                      أقبل الشروط
+                      <a href="">Storytel Unlimited</a>
+                    </label>
+                    <input class="form-check-input-reverse" type="checkbox" value="" id="defaultCheck1">
+                  </div>
                 <h3 class = "listeNow mt-4">استمع بلا حدود</h3>
                 <h6 class  = "text-center pay">ادفع الأن <mark>50%</mark></h6>
                 <a href="#" class="btn btn-block">اشترك الان</a>
