--- a/app/profile.html
+++ b/app/profile.html
@@ -297,16 +297,16 @@
       <div class="footer_black">
         <div class="container">
           <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-3 col-sm-12">
+            <div class="col-md-4 col-sm-12">
               <h3>تسجيل الدخول في الموقع </h3>
               <div class="mt-3">
                 <div class="offset-md-2">
                   <form class="subscribeForm" action="">
                     <div class="form-group">
-                      <button class="btn subscribeBtn">تسجيل االدخول</button>
+                      <button class="btn subscribeBtn">تسجيل الدخول</button>
                       <input type="email" class="form-control subscribeInput" placeholder="االبريد الالكتروني">
                     </div>
+                    
                   </form>
                   
                 </div>
