--- a/app/profile.html
+++ b/app/profile.html
@@ -202,8 +202,8 @@
                         </div>
                     </div>  
                     <div class="tab-pane fade" id="pills-exit" role="tabpanel" aria-labelledby="pills-exit-tab">
-                        <div class="container">
-                                <h2 class = "text-center mt-5">تسجيل الخروج</h2>
+                        <div class="container exit">
+                                <h2 class = "text-center">تسجيل الخروج</h2>
                         </div>
                     </div> 
                     <div class="tab-pane fade" id="pills-other" role="tabpanel" aria-labelledby="pills-other-tab">
