--- a/test.html
+++ b/test.html
@@ -1,33 +1,75 @@
-<div class="modal-body">
-	<div class="form-title text-center">
-		<h4>Login</h4>
-	</div>
-	<div class="d-flex flex-column text-center">
-		<form>
-			<div class="form-group">
-				<input type="email" class="form-control" id="email1" placeholder="Your email address...">
+<section class="videos py-5" id="videos-section">
+	<h2 class="section-title mb-3">بلدك في فيديو!</h2>
+	<p class="section-description">شاهد المئات من قصص الأطفال المتنوعة من قصص تاريخية وحيوانات وقصص تعزز قيم مجتمعية</p>
+	<div class="swiper">
+		<div class="item">
+			<div class="card">
+				<div class="top-card">
+					<img src="images/rank.png" class="rank-icon" alt="...">
+					<img src="images/play-btn-orange.png" class="card-icon" alt="...">
+				</div>
+				<div class="card-body text-center">
+					<h5 class="card-title">قصة القرد المتشائم </h5>
+					<p class="card-text">
+						مدينة من مدن فلسطين تم احتلالها سنة 1948 علي يد
+						جيش الاحتلال الصهيوني
+					</p>
+					<a href="singleStory.html" class="btn btn-card btn-primary">شاهد الان</a>
+				</div>
 			</div>
-			<div class="form-group">
-				<input type="password" class="form-control" id="password1" placeholder="Your password...">
+		</div>
+		<div class="item">
+			<div class="card">
+				<div class="top-card">
+					<img src="images/rank.png" class="rank-icon" alt="...">
+					<img src="images/play-btn-orange.png" class="card-icon" alt="...">
+				</div>
+				<div class="card-body text-center">
+					<h5 class="card-title">قصة القرد المتشائم </h5>
+					<p class="card-text">
+						مدينة من مدن فلسطين تم احتلالها سنة 1948 علي يد
+						جيش الاحتلال الصهيوني
+					</p>
+					<a href="singleStory.html" class="btn btn-card btn-primary">شاهد الان</a>
+				</div>
 			</div>
-			<button type="button" class="btn btn-info btn-block btn-round">Login</button>
-		</form>
-
-		<div class="text-center text-muted delimiter">or use a social network</div>
-		<div class="d-flex justify-content-center social-buttons">
-			<button type="button" class="btn btn-secondary btn-round" data-toggle="tooltip" data-placement="top"
-				title="Twitter">
-				<i class="fab fa-twitter"></i>
-			</button>
-			<button type="button" class="btn btn-secondary btn-round" data-toggle="tooltip" data-placement="top"
-				title="Facebook">
-				<i class="fab fa-facebook"></i>
-			</button>
-			<button type="button" class="btn btn-secondary btn-round" data-toggle="tooltip" data-placement="top"
-				title="Linkedin">
-				<i class="fab fa-linkedin"></i>
-			</button>
-			</di>
+		</div>
+		<div class="item">
+			<div class="card">
+				<div class="top-card">
+					<img src="images/rank.png" class="rank-icon" alt="...">
+					<img src="images/play-btn-orange.png" class="card-icon" alt="...">
+				</div>
+				<div class="card-body text-center">
+					<h5 class="card-title">قصة القرد المتشائم </h5>
+					<p class="card-text">
+						مدينة من مدن فلسطين تم احتلالها سنة 1948 علي يد
+						جيش الاحتلال الصهيوني
+					</p>
+					<a href="#" class="btn btn-card btn-primary">شاهد الان</a>
+				</div>
+			</div>
+		</div>
+		<div class="item">
+			<div class="card">
+				<div class="top-card">
+					<img src="images/rank.png" class="rank-icon" alt="...">
+					<img src="images/play-btn-orange.png" class="card-icon" alt="...">
+				</div>
+				<div class="card-body text-center">
+					<h5 class="card-title">قصة القرد المتشائم </h5>
+					<p class="card-text">
+						مدينة من مدن فلسطين تم احتلالها سنة 1948 علي يد
+						جيش الاحتلال الصهيوني
+					</p>
+					<a href="#" class="btn btn-card btn-primary">شاهد الان</a>
+				</div>
+			</div>
 		</div>
 	</div>
-</div>
+	<div class="storySection">
+		<h2>اكتشف رفوف القصص
+			<a href=""><i class="fa-solid fa-arrow-left-long pr-2"></i></a>
+		</h2>
+	</div>
+</section>
