--- a/backups/index-backup.html
+++ b/backups/index-backup.html
@@ -5,7 +5,6 @@
 	<link href="http://themazine.com/html/kabbo/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
 		integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=7">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -77,72 +76,72 @@
 
 	<!-- Videos-->
 	<section class="videos py-5" id="videos-section">
-		<h2 class="section-title mb-3">بلدك في فيديو!</h2>
+		<div class="title">
+			<h2 class="section-title mb-3">بلدك في فيديو!</h2>
+		</div>
 		<p class="section-description">شاهد المئات من قصص الأطفال المتنوعة من قصص تاريخية وحيوانات وقصص تعزز قيم مجتمعية</p>
-		<div class="swiper">
-			<div class="swiper-wrapper">
-				<div class="swiper-slide">
-					<div class="card">
-						<div class="top-card">
-							<img src="images/rank.png" class="rank-icon" alt="...">
-							<img src="images/play-btn-orange.png" class="card-icon" alt="...">
-						</div>
-						<div class="card-body text-center">
-							<h5 class="card-title">قصة القرد المتشائم </h5>
-							<p class="card-text">
-								مدينة من مدن فلسطين تم احتلالها سنة 1948 علي يد
-								جيش الاحتلال الصهيوني
-							</p>
-							<a href="singleStory.html" class="btn btn-card btn-primary">شاهد الان</a>
-						</div>
+		<div class="owl-carousel ow-theme">
+			<div class="item">
+				<div class="card">
+					<div class="top-card">
+						<img src="images/rank.png" class="rank-icon" alt="...">
+						<img src="images/play-btn-orange.png" class="card-icon" alt="...">
+					</div>
+					<div class="card-body text-center">
+						<h5 class="card-title">قصة القرد المتشائم </h5>
+						<p class="card-text">
+							مدينة من مدن فلسطين تم احتلالها سنة 1948 علي يد
+							جيش الاحتلال الصهيوني
+						</p>
+						<a href="singleStory.html" class="btn btn-card btn-primary">شاهد الان</a>
 					</div>
 				</div>
-				<div class="swiper-slide">
-					<div class="card">
-						<div class="top-card">
-							<img src="images/rank.png" class="rank-icon" alt="...">
-							<img src="images/play-btn-orange.png" class="card-icon" alt="...">
-						</div>
-						<div class="card-body text-center">
-							<h5 class="card-title">قصة القرد المتشائم </h5>
-							<p class="card-text">
-								مدينة من مدن فلسطين تم احتلالها سنة 1948 علي يد
-								جيش الاحتلال الصهيوني
-							</p>
-							<a href="singleStory.html" class="btn btn-card btn-primary">شاهد الان</a>
-						</div>
+			</div>
+			<div class="item">
+				<div class="card">
+					<div class="top-card">
+						<img src="images/rank.png" class="rank-icon" alt="...">
+						<img src="images/play-btn-orange.png" class="card-icon" alt="...">
+					</div>
+					<div class="card-body text-center">
+						<h5 class="card-title">قصة القرد المتشائم </h5>
+						<p class="card-text">
+							مدينة من مدن فلسطين تم احتلالها سنة 1948 علي يد
+							جيش الاحتلال الصهيوني
+						</p>
+						<a href="singleStory.html" class="btn btn-card btn-primary">شاهد الان</a>
 					</div>
 				</div>
-				<div class="swiper-slide">
-					<div class="card">
-						<div class="top-card">
-							<img src="images/rank.png" class="rank-icon" alt="...">
-							<img src="images/play-btn-orange.png" class="card-icon" alt="...">
-						</div>
-						<div class="card-body text-center">
-							<h5 class="card-title">قصة القرد المتشائم </h5>
-							<p class="card-text">
-								مدينة من مدن فلسطين تم احتلالها سنة 1948 علي يد
-								جيش الاحتلال الصهيوني
-							</p>
-							<a href="#" class="btn btn-card btn-primary">شاهد الان</a>
-						</div>
+			</div>
+			<div class="item">
+				<div class="card">
+					<div class="top-card">
+						<img src="images/rank.png" class="rank-icon" alt="...">
+						<img src="images/play-btn-orange.png" class="card-icon" alt="...">
+					</div>
+					<div class="card-body text-center">
+						<h5 class="card-title">قصة القرد المتشائم </h5>
+						<p class="card-text">
+							مدينة من مدن فلسطين تم احتلالها سنة 1948 علي يد
+							جيش الاحتلال الصهيوني
+						</p>
+						<a href="#" class="btn btn-card btn-primary">شاهد الان</a>
 					</div>
 				</div>
-				<div class="swiper-slide">
-					<div class="card">
-						<div class="top-card">
-							<img src="images/rank.png" class="rank-icon" alt="...">
-							<img src="images/play-btn-orange.png" class="card-icon" alt="...">
-						</div>
-						<div class="card-body text-center">
-							<h5 class="card-title">قصة القرد المتشائم </h5>
-							<p class="card-text">
-								مدينة من مدن فلسطين تم احتلالها سنة 1948 علي يد
-								جيش الاحتلال الصهيوني
-							</p>
-							<a href="#" class="btn btn-card btn-primary">شاهد الان</a>
-						</div>
+			</div>
+			<div class="item">
+				<div class="card">
+					<div class="top-card">
+						<img src="images/rank.png" class="rank-icon" alt="...">
+						<img src="images/play-btn-orange.png" class="card-icon" alt="...">
+					</div>
+					<div class="card-body text-center">
+						<h5 class="card-title">قصة القرد المتشائم </h5>
+						<p class="card-text">
+							مدينة من مدن فلسطين تم احتلالها سنة 1948 علي يد
+							جيش الاحتلال الصهيوني
+						</p>
+						<a href="#" class="btn btn-card btn-primary">شاهد الان</a>
 					</div>
 				</div>
 			</div>
@@ -959,7 +958,6 @@
 	<!-- Scripts-->
 	<script src="http://themazine.com/html/kabbo/js/jquery-3.3.1.min.js"></script>
 	<script src="http://themazine.com/html/kabbo/js/bootstrap.min.js"></script>
-	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 	<script src="./dist/bundled.js"></script>
 </body>
 
