Fixing testimonials slider issues

--- a/app/index.html
+++ b/app/index.html
@@ -256,7 +256,9 @@
 									<p>أنا وليد من مدينة اللد المحتلة ولقد شاهدت
 										قصة مدينة اللد </p>
 									<h3>هيا اللولو</h3>
-									<p><a>5 سنوات</a></p>
+									<p>
+										<span>5 سنوات</span>
+									</p>
 								</div>
 							</div>
 
@@ -268,7 +270,9 @@
 									<p>أنا وليد من مدينة اللد المحتلة ولقد شاهدت
 										قصة مدينة اللد </p>
 									<h3>هيا اللولو</h3>
-									<p><a>5 سنوات</a></p>
+									<p>
+										<span>5 سنوات</span>
+									</p>
 								</div>
 							</div>
 
@@ -280,7 +284,9 @@
 									<p>أنا وليد من مدينة اللد المحتلة ولقد شاهدت
 										قصة مدينة اللد </p>
 									<h3>هيا اللولو</h3>
-									<p><a>5 سنوات</a></p>
+									<p>
+										<span>5 سنوات</span>
+									</p>
 								</div>
 							</div>
 
@@ -292,7 +298,9 @@
 									<p>أنا وليد من مدينة اللد المحتلة ولقد شاهدت
 										قصة مدينة اللد </p>
 									<h3>هيا اللولو</h3>
-									<p><a>5 سنوات</a></p>
+									<p>
+										<span>5 سنوات</span>
+									</p>
 								</div>
 							</div>
 
@@ -304,7 +312,9 @@
 									<p>أنا وليد من مدينة اللد المحتلة ولقد شاهدت
 										قصة مدينة اللد </p>
 									<h3>هيا اللولو</h3>
-									<p><a>5 سنوات</a></p>
+									<p>
+										<span>5 سنوات</span>
+									</p>
 								</div>
 							</div>
 
@@ -316,7 +326,9 @@
 									<p>أنا وليد من مدينة اللد المحتلة ولقد شاهدت
 										قصة مدينة اللد </p>
 									<h3>هيا اللولو</h3>
-									<p><a>5 سنوات</a></p>
+									<p>
+										<span>5 سنوات</span>
+									</p>
 								</div>
 							</div>
 
@@ -328,7 +340,9 @@
 									<p>أنا وليد من مدينة اللد المحتلة ولقد شاهدت
 										قصة مدينة اللد</p>
 									<h3>هيا اللولو</h3>
-									<p><a>5 سنوات</a></p>
+									<p>
+										<span>5 سنوات</span>
+									</p>
 								</div>
 							</div>
 						</div>
@@ -344,7 +358,9 @@
 									<p>أنا وليد من مدينة اللد المحتلة ولقد شاهدت
 										قصة مدينة اللد </p>
 									<h3>هيا اللولو</h3>
-									<p><a>5 سنوات</a></p>
+									<p>
+										<span>5 سنوات</span>
+									</p>
 								</div>
 							</div>
 
@@ -356,7 +372,9 @@
 									<p>أنا وليد من مدينة اللد المحتلة ولقد شاهدت
 										قصة مدينة اللد </p>
 									<h3>هيا اللولو</h3>
-									<p><a>5 سنوات</a></p>
+									<p>
+										<span>5 سنوات</span>
+									</p>
 								</div>
 							</div>
 
@@ -368,7 +386,9 @@
 									<p>أنا وليد من مدينة اللد المحتلة ولقد شاهدت
 										قصة مدينة اللد </p>
 									<h3>هيا اللولو</h3>
-									<p><a>5 سنوات</a></p>
+									<p>
+										<span>5 سنوات</span>
+									</p>
 								</div>
 							</div>
 
@@ -380,7 +400,9 @@
 									<p>أنا وليد من مدينة اللد المحتلة ولقد شاهدت
 										قصة مدينة اللد </p>
 									<h3>هيا اللولو</h3>
-									<p><a>5 سنوات</a></p>
+									<p>
+										<span>5 سنوات</span>
+									</p>
 								</div>
 							</div>
 
